--- a/css/style.css
+++ b/css/style.css
@@ -77,11 +77,11 @@ img {
 
 }
 
-.main-header-bar {
+.main-header {
   background-color: var(--basic-white);
 }
 
-.main-navigation-wrapper {
+.main-navigation {
   display: grid;
   grid-template-columns:  1fr 1fr 2fr 1fr 1fr;
   width: 1200px;
@@ -119,6 +119,12 @@ img {
 
 .index-main{
  display: grid;
+}
+
+.container {
+  width: 1200px;
+  margin: 0 auto;
+  padding: 0 10px;
 }
 
 /* Reasons */
@@ -190,7 +196,6 @@ list-style: none;
 .advantages {
   justify-self: center;
   margin-top: 80px;
-  height: 330px;
 }
 
 .advantages-list {
@@ -287,7 +292,6 @@ list-style: none;
 
 .interested {
   min-width: 100%;
-  height: 291px;
   background-color: var(--basic-white);
   text-align: center;
 }
