--- a/css/style.css
+++ b/css/style.css
@@ -124,7 +124,6 @@ img {
   width: 1200px;
   margin: 0 auto;
   padding: 0 10px;
-  text-align: center;
 }
 
 /* Reasons */
@@ -389,28 +388,36 @@ list-style: none;
 }
 
 .filter-menu {
-  background: url("..img/catalog-background.jpg") no-repeat;
+  background: url("../img/catalog-background.jpg") no-repeat;
+  display: grid;
+  grid-template-columns: 1fr 1fr 2fr;
+  align-content: start;
+  padding-top: 26px;
+  padding-bottom: 32px;
 }
 
 .filter-menu ul {
 
 }
 
+
 .form-legend {
-    display: inline-block;
-    width: 25%;
-    vertical-align: top;
-    padding: 27px 10px 30px;
-    padding-left: 26px;
-    box-sizing: border-box;
     font-size: 16px;
     line-height: 21px;
     font-weight: 700;
+    padding-left: 72px;
     color: var(--basic-white);
 }
 
-
 .filter-list {
+  padding-left: 72px;
+
+}
+
+.filter-list ul {
+  list-style: none;
+  margin: 0;
+  padding: 0;
 }
 
 .housing {
@@ -425,16 +432,19 @@ list-style: none;
 }
 
 .price {
-  display:inline-block;
-  width: 50%;
-  padding-top: 26px;
-  vertical-align: top;
-  box-sizing: border-box;
+ grid-column-start: 3;
+ grid-column-end: -1;
+ padding-top: 26px;
+ padding-left: 197px;
+ margin-right: 72px;
+
 }
 
 
 .min-price {
   list-style: none;
+  margin: 0;
+  padding: 0;
   color: var(--basic-black);
 }
 
@@ -446,6 +456,9 @@ list-style: none;
   text-decoration: none;
   color: var(--basic-white);
   border: none;
+  margin: 32px auto 33px;
+  padding: 6px 33px;
+  line-height: 20px;
 }
 
 .results {
@@ -453,19 +466,17 @@ list-style: none;
  grid-template-columns: 1fr 1fr 1fr 2fr;
  justify-content: center;
  background-color: var(--bacis-white);
-
+ padding-left: 73px;
+ padding-top: 30px;
+ padding-bottom: 30px;
+ color: var(--basic-black);
 }
 
 
 .match {
-  padding-top: 30px;
-  padding-bottom: 30px;
-  padding-left: 73px;
   font-size: 21px;
   line-height: 26px;
   font-weight: 700;
-  color: var(--basic-black);
-
 }
 
 .sorting {
@@ -500,6 +511,8 @@ list-style: none;
 .sorting-buttons {
   text-decoration: none;
   border: none;
+  text-align: right;
+  vertical-align: top;
 }
 
 .view-result {
@@ -515,22 +528,64 @@ list-style: none;
 }
 
 .housing-item {
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  align-content: start;
+
 
 }
 
 .hotel-container {
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+
 
 }
 
-.hotel-container h3 {
+.hotel-container img {
+  grid-column-start: 1;
+  grid-column-end: 2;
+  width: 135px;
+  height: 90px;
+
+}
+
+
+
+.hotel-title {
+  grid-column-start: 2;
+  grid-column-end: 3;
   font-size: 21px;
   line-height: 26px;
   font-weight: 700;
   color: var(--basic-black);
+  padding: 0;
+  margin: 0;
+
+}
+
+.hotel-container h3 {
+
 }
 
 .hotel-container p {
+
+}
+
+.hotel-type {
+  grid-column-start: 2;
+  grid-column-end: 3;
   color: var(--basic-black);
+  padding: 0;
+  margin: 0;
+
+}
+
+.buttons-wrapper {
+  grid-column-start: 2;
+  grid-column-end: 3;
+
+
 }
 
 .hotel-container .more-btn {
@@ -553,15 +608,11 @@ list-style: none;
     border: none;
   }
 
-.hotel-title{
-
-}
-
-.hotel-type {
-
-}
 
 .rating{
+  grid-column-start: 3;
+  grid-column-end: 4;
+  text-align: end;
 
 }
 
