--- a/css/style.css
+++ b/css/style.css
@@ -494,6 +494,7 @@ list-style: none;
 .sort-list {
   display: flex;
   justify-content: space-between;
+  width: 240px;
   margin: 0;
   padding: 0;
 }
